<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="instructions_title_text">Instructions</string>
    <string name="actual_instructions_text">1. Fill in the fields \n 2. Add the shoe to your inventory \n 3. Go back to see your list \n
    </string>
    <string name="intro_text_in_welcome_screen">This app is to keep track of shoe items in our inventory!</string>
    <string name="list_of_shoes_text">List of Shoes</string>
    <string name="welcome_message">Welcome, user!</string>
    <string name="name_text">Name:</string>
    <string name="size_text">Size:</string>
    <string name="description_text">Description:</string>
    <string name="company_text">Company:</string>
    <string name="cancel_text">Cancel</string>
</resources>
